--- a/app/globals.css
+++ b/app/globals.css
@@ -16,8 +16,8 @@
   --card-foreground: oklch(0.147 0.004 49.25);
   --popover: oklch(1 0 0);
   --popover-foreground: oklch(0.147 0.004 49.25);
-  --primary: oklch(0.216 0.006 56.043);
-  --primary-foreground: oklch(0.985 0.001 106.423);
+  --primary: oklch(0.7634 0.1531 79.55);
+  --primary-foreground: oklch(0.147 0.004 49.25);
   --secondary: oklch(0.97 0.001 106.424);
   --secondary-foreground: oklch(0.216 0.006 56.043);
   --muted: oklch(0.97 0.001 106.424);
@@ -52,8 +52,8 @@
   --card-foreground: oklch(0.985 0.001 106.423);
   --popover: oklch(0.147 0.004 49.25);
   --popover-foreground: oklch(0.985 0.001 106.423);
-  --primary: oklch(0.985 0.001 106.423);
-  --primary-foreground: oklch(0.216 0.006 56.043);
+  --primary: oklch(76.34% 0.1531 79.55);
+  --primary-foreground: oklch(0.147 0.004 49.25);
   --secondary: oklch(0.268 0.007 34.298);
   --secondary-foreground: oklch(0.985 0.001 106.423);
   --muted: oklch(0.268 0.007 34.298);
