--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -26,7 +26,7 @@
 }
 
 :root {
-  --background: oklch(76.337% 0.15314 79.55 / 0.07);
+  --background: var(--clr-gold-25);
   --foreground: oklch(0.147 0.004 49.25);
   --card: oklch(1 0 0);
   --card-foreground: oklch(0.147 0.004 49.25);
